--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "gm": "^1.17.0",
-    "mime": "^1.2.11"
+    "mime": "^1.2.11",
+    "parseurl": "^1.3.0",
+    "utils-merge": "^1.0.0"
   },
   "repository": {
     "type": "git",
